[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.2.0"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
pnet = "0.34.0"
toml = "0.8.8"
serde = { version = "1.0.195", features = ["derive"] }
